# apiceclinic-module/clinic/src/main/kotlin/com/clinica/doors/outbound/database/entities/FitnessAppointmentEntity.kt
@@ -12,12 +12,12 @@ class FitnessAppointmentEntity(
     val id: Long = 0,
 
     @ManyToOne(fetch = FetchType.LAZY, optional = false)
-    @JoinColumn(name = "client_id", nullable = false)
-    var clientEntity: ClientEntity,
+    @JoinColumn(name = "patient_id", nullable = false)
+    var patientEntity: PatientEntity,
 
     @ManyToOne(fetch = FetchType.LAZY, optional = false)
     @JoinColumn(name = "trainer_id", nullable = false)
-    var staff: StaffEntity,
+    var specialist: SpecialistEntity,
 
     @Column(name = "scheduled_at", nullable = false)
     var scheduledAt: LocalDateTime,
